Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- New div based render method for tabular widgets allows making of
  simple listings, such as CPSDefault's search results page
Bug fixes
~~~~~~~~~
- braindatamodel relays to corresponding object datamodel
  if requested key is missing in brains.
- #1768: pseudo-groups support in folder_localroles.html
- Quick Display Date Time Widget used to fail on empty dates
New internal features
~~~~~~~~~~~~~~~~~~~~~
- Refactored batch perform view to make it usable by concrete applications