@@ -28,6 +28,7 @@ A simpler render method that puts each "row" in a div element.
 	           columns options/columns;
 		   rows options/rows;
                    empty_message options/empty_message|string:;
+                   css_class options/css_class;
 		   ">
   <tal:block condition="make_form">
     <tal:comment condition="nothing">
@@ -39,10 +40,13 @@ A simpler render method that puts each "row" in a div element.
 					method='post'
 					enctype='multipart/form-data'> "/>
   </tal:block>
-    <div tal:repeat="row rows"
-	 tal:attributes="class python:test(repeat['row'].odd(),
-			 'odd', 'even')">
-      <tal:block replace="structure row" />
+    <div tal:omit-tag="not:css_class"
+         tal:attributes="class css_class">
+      <div tal:repeat="row rows"
+           tal:attributes="class python:test(repeat['row'].odd(),
+                           'odd', 'even')">
+        <tal:block replace="structure row" />
+      </div>
     </div>
   <p tal:condition="not:rows" tal:content="empty_message"
     i18n:translate=""></p>
